<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/snow"
        >
        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_button_yes"
            android:text="@string/finish_dialog"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.TextView.Bold"
            android:textSize="24sp"
            app:layout_constraintVertical_weight="1"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_button_no"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_button_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            android:text="@string/finish_dialog_no"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.Button.Secondary"
            android:textSize="22sp"
            android:background="@drawable/btn_secondary_angled"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_button_yes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_description"
            app:layout_constraintStart_toEndOf="@id/dialog_button_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            android:text="@string/finish_dialog_yes"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.Button.Primary"
            android:textSize="22sp"
            android:background="@drawable/btn_primary_angled"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>