<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.anotn.antstock.android.presentation.ui.fragment.chart.ChartFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stock_title_container"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stock_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/stock_ticker"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                app:fontFamily="@font/font_elecsafe_bol"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stock_ticker"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toEndOf="@id/stock_name"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/stock_ticker"
                android:textSize="24sp"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                app:fontFamily="@font/font_elecsafe_reg"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stock_detail_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stock_title_container"
            app:layout_constraintBottom_toBottomOf="parent">

        </androidx.recyclerview.widget.RecyclerView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:background="@drawable/btn_primary_angled"
            android:text="@string/buy"
            android:textSize="24sp"
            android:fontFamily="@font/font_elecsafe_reg"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>